# ssl-certificate-tools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: cli-release.yml  web-deploy.yml
apps/cli/: Cargo.toml  README.md
apps/cli/src/: main.rs  output.rs
apps/cli/src/commands/: bundle.rs  check.rs  convert.rs  create_csr.rs  decode_cert.rs  decode_csr.rs  domain.rs  fingerprint.rs  key_convert.rs  match_key.rs  mod.rs  tomcat.rs
apps/cli/tests/: create_csr.rs
apps/web/: .dockerignore  Dockerfile  jest.config.ts  next.config.ts  package.json  tailwind.config.ts
apps/web/__tests__/fixtures/: index.ts
apps/web/__tests__/lib/: cert-decoder.test.ts  csr-creator.test.ts  csr-decoder.test.ts  key-matcher.test.ts  ssl-checker.test.ts  ssl-converter.test.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/cert-decoder/: page.tsx
apps/web/src/app/cli/: page.tsx
apps/web/src/app/csr-creator/: page.tsx
apps/web/src/components/: CliHint.tsx  FileUploadArea.tsx  Footer.tsx  Navbar.tsx  ResultCard.tsx  ThemeProvider.tsx  ThemeToggle.tsx  ToolCard.tsx  ToolPageLayout.tsx
apps/web/src/lib/: cert-decoder.ts  csr-creator.ts  csr-decoder.ts  domain-classifier.ts  fingerprint.ts  key-matcher.ts  ssl-checker.ts  ssl-converter.ts
docs/superpowers/plans/: 2026-06-04-ssl-certificate-tools.md  2026-07-23-crates-io-first-publish.md  2026-07-23-crates-io-post-publish.md
docs/superpowers/specs/: 2026-06-04-ssl-certificate-tools-design.md  2026-07-23-crates-io-first-publish-design.md
(+12 files in other folders)
