[package]
name = "ssl-tools"
version = "1.0.6"
edition = "2021"
description = "SSL certificate utilities CLI for checking, decoding, converting, and creating certificates and CSRs"
license = "MIT"
repository = "https://github.com/nugiabdiansyah/ssl-certificate-tools"
homepage = "https://ssl.nugi.biz/cli"
readme = "README.md"
keywords = ["ssl", "tls", "certificate", "x509", "cli"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "ssl-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x509-parser = "0.16"
pem = "3"
native-tls = "0.2"
colored = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"
